Version 1.9 EWF Almost done program, only some typo errors to rewrite